<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/details_product_content_description"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"/>
        <TextView
            android:id="@+id/tv_product_descripition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bv_buy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BuyNow"/>

        <Button
            android:id="@+id/bv_favourite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_to_favorites"/>

        <Button
            android:id="@+id/bv_remove_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_from_favorites"/>

    </LinearLayout>




</LinearLayout>